--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.986.0",
     "@aws-sdk/lib-dynamodb": "^3.986.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^5.0.1",
     "@nestjs/common": "^10.4.22",
     "@nestjs/core": "^10.4.22",
     "@nestjs/platform-express": "^10.4.22",
-    "@nestjs/swagger": "^11.2.6",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
-    "swagger-ui-express": "^5.0.1"
+    "@nestjs/swagger": "^7.4.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.9",
