--- a/package.json
+++ b/package.json
@@ -19,18 +19,17 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.986.0",
     "@aws-sdk/lib-dynamodb": "^3.986.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
-    "swagger-ui-express": "^5.0.1",
-    "@nestjs/common": "^10.4.22",
-    "@nestjs/core": "^10.4.22",
-    "@nestjs/platform-express": "^10.4.22",
-    "@nestjs/swagger": "^7.4.2"
+    "@nestjs/common": "10.4.22",
+    "@nestjs/core": "10.4.22",
+    "@nestjs/platform-express": "10.4.22",
+    "@nestjs/swagger": "7.4.2",
+    "reflect-metadata": "0.1.14",
+    "rxjs": "7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.9",
     "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/testing": "10.4.22",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
