Remove EB prebuild hook

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # compiled output
-/dist
 /node_modules
 .env
 
@@ -34,3 +33,7 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
