--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@nestjs/core": "10.4.22",
     "@nestjs/platform-express": "10.4.22",
     "@nestjs/swagger": "7.4.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "reflect-metadata": "0.1.14",
     "rxjs": "7.8.1"
   },
